# icfpc2024

./: .gitignore  Cargo.toml  README.md  brute3d.sh
py/: 3d_preprocess.py  3d_router.py  com.py  eval.py  get index  in.txt  lambdaman.ipynb  lambdaman_compact.ipynb  lambdaman_human.ipynb  lambdaman_run.py  lambdaman_solver.py  lex.py  out.txt  requirements.txt  spaceship_compact.py  spaceship_tosvg.py  string_compression.py  submit_spaceship.sh  test.ipynb  tsp.py  tsp_spaceship.py  virtual_env.sh  visualize_spaceship.sh
py/history/: get 3d  get echo  get efficiency  get etcpasswd  get index  get lambdaman  get language_test  get scoreboard  get spaceship
py/history/efficiency/: 1  1.pretty  10  10.pretty  11  11.pretty  12  12.pretty  12.raw  13  13.pretty  2  2.pretty  3  3.pretty  4  4.pretty  5  5.pretty  6  6.pretty  7  7.pretty  8  8.pretty  9  9.pretty
py/history/lambdaman/: 1  10  11  12  13  14  15  16  17  18  19  2  21  21_encoded copy  3  4  5  6  7  8  9
py/history/spaceship/: 20_tsp  24_tsp
py/solutions/3d/: 1.solution  11.py  2.solution  3.solution  4.solution  5.solution  6.solution  7.py  7.solution  7.template  8.solution  8.template  9.solution  9.template  patterns
py/solutions/efficiency/: efficiency10.py  efficiency11.py  efficiency12.py  efficiency7.py  efficiency8.py  efficiency9.py
solver/: Cargo.toml
solver/examples/: communicate.rs  json.rs  visualizer.rs
solver/src/: foo.rs  lib.rs  solve_spaceman_greedy.rs  solve_spaceship_greedy.rs  submission_api.rs
solver/src/bar/: mod.rs
solver/tests/: example_integration_test.rs
(+192 files in other folders)
