[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "solve_spaceship"

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
macroquad = "0.3"
num-bigint = "0.4"
reqwest = { version = "0.12.5", features = ["stream", "blocking"]}
clap = { version = "4.5.6", features = ["derive"] }
